bug: fixed a bunch of react errors regarding a tags, also wrapped up the categories section in the interest of time

--- a/swiftshop/src/App.css
+++ b/swiftshop/src/App.css
@@ -206,8 +206,8 @@ footer .input-group-text {
 /* Home Categories */
 
 .categories {
-  background-color: #DDA15E;
-  box-shadow: 0 0 10px var(--color-primary);
+  background-color: white;
+  box-shadow: 0 0 25px var(--color-primary);
   padding: 15px;
 }
 
@@ -216,18 +216,27 @@ footer .input-group-text {
   padding: 10px 40px 10px 40px;
 }
 
+.categories > div > div {
+  width: 60%
+}
+
 .categories > div:nth-child(1),
 .categories > div:nth-child(2),
 .categories > div:nth-child(3),
 .categories > div:nth-child(4){
-
-  border-bottom: 1px solid var(--color-quaternary);
+  border-bottom: 1px solid var(--color-secondary);
 }
 
 .categories > div:nth-child(1),
 .categories > div:nth-child(2),
 .categories > div:nth-child(3){
-  border-right: 1px solid var(--color-quaternary);
+  border-right: 1px solid var(--color-secondary);
+}
+
+.categories > div:nth-child(5),
+.categories > div:nth-child(6),
+.categories > div:nth-child(7){
+  border-right: 1px solid var(--color-secondary);
 }
 
 .categories > div > img {
